--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AndroidUrlDispatchHelper</string>
+    <string name="app_name">Url分发</string>
     <string name="current_default_browser">默认浏览器</string>
     <string name="current_special_browser">隐私浏览器</string>
     <string name="redirecting">正在跳转中...</string>
